<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".BLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="130dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="26dp"
            android:src="@drawable/rocketlogo"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_color="@color/colorAccent"
            app:civ_shadow_radius="10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:alpha="0.8"
            android:background="@android:color/white"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/Correo"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/colorTexto" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/Contraseña"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/colorTexto" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/BotonLogin"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>