<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BMain">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/planetearth" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="-200dp"
            android:background="@drawable/scrim" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="130dp"
            android:src="@drawable/rocketlogo"
            app:civ_border_color="#EEEEEE"
            app:civ_border_width="0dp" />

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="140dp"
            android:text="@string/textmain"
            android:textColor="@color/colorLetraTitulos"
            android:textSize="20dp"
            android:textStyle="bold" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="272dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_texto"
            android:layout_width="wrap_content"
            android:layout_height="449dp"
            android:layout_marginTop="20dp">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_texto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Texto"
                    android:textSize="15dp" />

            </ScrollView>
        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="15dp">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/b_button"
            android:text="@string/BotonRegistro"
            android:textColor="@color/colorPrimary" />


        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/BotonRegistro2"
            android:textColor="@color/colorLetraTitulos" />
    </LinearLayout>

</LinearLayout>